[package]
name = "sagittarius"
version = "0.1.0"
authors = ["renhongdi <ryan.hd.ren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.5.0", features = ["unstable"]}
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
log = "0.4.0"
env_logger = "0.7.1"
once_cell = "1.3"
rand = "0.7"
chrono = "0.4"
lru = "0.4.3"

[[bin]]
name = "sagittarius-client"
path = "src/bin/client.rs"

[[bin]]
name = "sagittarius-server"
path = "src/bin/server.rs"

[lib]
path = "src/lib.rs"